# sysyc

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.riscv-cross-compiler  README.md  main.cpp  parser.y  scanner.l  test.ssa  设计文档.md
.riscv/: sylib.c  sylib.h
include/: ast.h  ast_visitor.h  ast_vistor.h  error.h  parser.h  utils.h  visitor.h
include/ir/: builder.h  folder.h  ir.h  ops.h
include/midend/: Symbol.h  Type.h  symbol.h  type.h
include/opt/pass/: base.h  cfg.h  dead.h  func.h  gcm.h  gvn.h  live.h  loop.h  mem2reg.h  pass.h  propa.h  simplify_cfg.h  ssa.h
include/sym/: symbol.h  type.h
scripts/: build.sh  deploy.sh  deploy_test_build.sh  format.sh  pre_build.sh  qbe_run.sh  riscv_docker_run.sh  riscv_run.sh  test.sh  tidy.sh
src/: ast.cpp  ast_vistor.cpp  error.cpp  parser.cpp  scanner.cpp  vistor.cpp
src/ir/: builder.cpp  folder.cpp  ir.cpp
src/midend/: Type.cpp  type.cpp
src/opt/pass/: cfg.cpp  dead.cpp  func.cpp  gcm.cpp  gvn.cpp  live.cpp  loop.cpp  mem2reg.cpp  propa.cpp  simplify_cfg.cpp  ssa.cpp
src/sym/: type.cpp
tests/: CMakeLists.txt  test_ast.cpp  test_ir.cpp  test_lexical_and_syntax.cpp  test_pass.cpp  test_symbol_table.cpp  test_test.cpp  test_type_system.cpp  test_visitor.cpp
